# scroller

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: build.yml  release.yml  test.yml
res/: logo.psd  qml.qrc
scroller/: Generator.py  ImageModel.py  ImageProxy.py  ManagedThreadPool.py  ResponseServer.py  __main__.py  gui.qml  main.py  qml.qrc
scroller/Models/: ImageModel.py  ImageModelReddit.py
scroller/qml/: gui.qml
scroller/qml/components/: DockMenu.qml
scroller/qml/delegates/: ListDelegateGif.qml  ListDelegateImage.qml
scroller/res/: gui.qml
scroller/res/delegates/: ListDelegateGif.qml  ListDelegateImage.qml
scrolller/: __main__.py  gui.qml  main.py  qml.qrc  qml_rc.py
src/: gui.qml  main.py  qml_rc.py
tests/: test_Generator.py  test_ImageProxy.py
