[tool.poetry]
name = "scroller"
version = "0.1.0"
description = ""
authors = ["robert-clayton <41345902+robert-clayton@users.noreply.github.com>"]
license = "MIT"

[tool.pytest.ini_options]
pythonpath = "scroller"

[tool.poetry.scripts]
scroller = "scroller.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Pillow = "^8.3.2"
PySide6 = "^6.4.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"
bandit = "^1.7.0"
pytest = "^6.2.5"
pyinstaller = "^4.5.1"
pytest-qt = "^4.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
